# e-to-audio-b

./: .clinerules  .cursorrules  .editorconfig  .env.example  .eslintrc.js  .firebaserc  .gitignore  .goosehints  .kilocodemodes  .pre-commit-config.yaml  .prettierignore  .roomodes  .windsurfrules  CONTRIBUTING.md  DEPLOYMENT.md  EtoAudioBook.code-workspace  LLM_EXTENSIONS_RULES.md  MCP-SETUP.md  Makefile  PERFORMANCE.md  QUICKSTART.md  README.md  SECURITY.md  SETUP_INSTRUCTIONS.md  TESTING.md  app.py  demo-story.md  deploy-local.bat  docker-compose.yml  format_backend.bat  format_frontend.bat  install_eslint_deps.bat  install_eslint_import_plugin.bat  integration-test.bat  lint_frontend.bat  lint_frontend_legacy.bat  lint_frontend_new.bat  load-test.bat  mcp.json  package-lock.json  (+13 more)
.github/: copilot-instructions.md
.github/workflows/: bandit.yml
.roo/: mcp.json
.roo/rules/: App Development - React Native.md
.session-log/: srs-writer-session_main.json
Backend/: .flake8  .gitignore  Dockerfile  app.py  async_tasks.py  cache.py  config.py  credentials.py  credentials_template.py  debug_tts.py  logging_config.py  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  simple_app.py  test_backend.py  test_tts.py  test_voices.py  upload_secret_to_secretmanager.ps1
Backend/config/: __init__.py
Backend/core/: __init__.py
Backend/models/: voice_model.py
Backend/routes/: api_routes.py  monitoring.py
Backend/scripts/: seed_voices.py
Backend/services/: analyze_voices.py  content_parser.py  openai_tts_service.py  tts_service.py  validation.py  voice_analyzer.py  voice_avatar_generator.py  voice_classifier.py  voice_tagger.py
Backend/tests/: conftest.py  test_app.py  test_avatars.html  test_config.py  test_credentials.py  test_integration.py  test_performance.py  test_tagging.py
Backend/utils/: cache.py  database.py  performance.py  scheduler.py
Ebooks/Diesel Demon/: Diesel Demon_ Chapter One – Blacktop Baptism.md  Diesel Demon_ Logline.md
docs/: AGENTS.md  DOCKER-DEPLOYMENT.md  E-to-Audio Book_ Web Application Development.md  GEMINI.md  MCP-AGENTS-GUIDE.md  MCP-SETUP.md  Project Specifications Check List.md  phase1_discovery_document.md
docs/Ebook-Proj/Diesel Demon/: Diesel Demon_ Chapter One – Blacktop Baptism.md
mcp_files/: mcp_openai_tts_server.py  mcp_server.py
reports/: optimize_report.md
scripts/: credentials.gen.py  generate_mcp_script.py  optimize_agent.py  pycode.py
scripts/deployment/: deploy-optimized.bat  deploy-production.bat  deploy.bat  docker-deploy.bat  docker-deploy.sh
user_stories/: functional_stories.md
workspace/: .gitignore
